syntax = "proto3";
package User;
message Empty {}
service UserService {
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc CreateUser(CreateUserRequest) returns (User);
  rpc UpdateUser(UpdateUserRequest) returns (User);
  rpc DeleteUser(DeleteUserRequest) returns (Empty);
}
message User {
    string email=1;
    string nick=2;
    string description=3;
    string password=4;
}
message ListUsersRequest {
    int32 offset=1;
    int32 limit=2;
}
message GetUserResponse{
    optional User payload=1;
}
message GetUserRequest {
    string email=1;
}
message CreateUserRequest {
    string email=1;
    string nick=2;
    string description=3;
    string password=4;
}
message UpdateUserRequest {
    string email=1;
    User user = 2;
}
message DeleteUserRequest {
    string email=1;
}

message ListUsersResponse {
    repeated User users=1;
    int32 total=2;
}